Save Buffers cancelled renders show nothing in Image Editor #44682

Closed
opened 2015-05-12 07:30:01 +02:00 by Dalai Felinto · 12 comments

System Information
OSX 10.9

Blender Version
Broken: master (e38f9144)
Worked: 2.74 (or rather, pre-multiview)

Short description of error
After cancelling a render that uses "Save Buffers" the rendered so far result is not flushed to the Image Editor.

Also I get a message along those lines, which seems to be clearly related:

//OpenEXR-readPixels: ERROR: Error reading pixel data from image file
"/tmp/blender_aWGCTb/display_buffer_progress_blend_Scene_Cube_exr". Tile (0, 0, 0, 0) is missing.//

Exact steps for others to reproduce the error
Open the file: display_buffer_progress.blend , press render, and Esc after a few of the tiles are rendered.

(note: originally reported here - 1227e5c3 since it was masked by the bug fixed by that commit)

**System Information** OSX 10.9 **Blender Version** Broken: master (e38f9144) Worked: 2.74 (or rather, pre-multiview) **Short description of error** After cancelling a render that uses "Save Buffers" the rendered so far result is not flushed to the Image Editor. Also I get a message along those lines, which seems to be clearly related: //OpenEXR-readPixels: ERROR: Error reading pixel data from image file "/tmp/blender_aWGCTb/display_buffer_progress_blend_Scene_Cube_exr". Tile (0, 0, 0, 0) is missing.// **Exact steps for others to reproduce the error** Open the file: [display_buffer_progress.blend](https://archive.blender.org/developer/F173134/display_buffer_progress.blend) , press render, and Esc after a few of the tiles are rendered. (note: originally reported here - 1227e5c3 since it was masked by the bug fixed by that commit)
Author
Owner

Changed status to: 'Open'

Changed status to: 'Open'
Author
Owner

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Dalai Felinto was assigned by Sergey Sharybin 2015-05-12 13:44:52 +02:00

Added subscriber: @Sergey

Added subscriber: @Sergey

Dalai, isn't it up to you? :)

Dalai, isn't it up to you? :)
Author
Owner

Yes it is, but I'm having a hard time pinning this out and thought it was worthy reporting it officially :)

I believe this may have to do with all RenderLayers now having a COMBINED pass. display_buffer relies on a strange design in my opinion :/

Yes it is, but I'm having a hard time pinning this out and thought it was worthy reporting it officially :) I believe this may have to do with all RenderLayers now having a COMBINED pass. display_buffer relies on a strange design in my opinion :/

display_buffer is needed to prevent having full-frame float buffer during rendering, so memory footprint is as low as possible. If the COMBINED pass you're referring to is allocated for the whole frame the concept of saving buffers is totally violated then.

`display_buffer` is needed to prevent having full-frame float buffer during rendering, so memory footprint is as low as possible. If the COMBINED pass you're referring to is allocated for the whole frame the concept of saving buffers is totally violated then.
Author
Owner

The COMBINED pass I'm referring to is the one created in render_result.c::render_result_new(). Before (pre-multiview) we were adding a COMBINED pass only for rr->do_exr_tile.

But that would leave the RenderLayers with no place to store their (pre-view) combined pass (given that "rl->rectf" was extinct), so we create a RenderPass for each layer that is a COMBINED one.

The COMBINED pass I'm referring to is the one created in render_result.c::render_result_new(). Before (pre-multiview) we were adding a COMBINED pass only for rr->do_exr_tile. But that would leave the RenderLayers with no place to store their (pre-view) combined pass (given that "rl->rectf" was extinct), so we create a RenderPass for each layer that is a COMBINED one.
Author
Owner

Just a thought, maybe the issue here is that instead of using TiledOutputFile we are now using MultiPartOutputFile (in IMB_exrtile_begin_write()).

If you use multiview you can see that you can even cancel after one of the views is complete, and get it fully back, when we read back the EXR.

I don't remember now, but maybe a multi-part file can only have a part read back when its complete, while a TiledOutput allowed for incomplete tiles?

Just a thought, maybe the issue here is that instead of using TiledOutputFile we are now using MultiPartOutputFile (in IMB_exrtile_begin_write()). If you use multiview you can see that you can even cancel after one of the views is complete, and get it fully back, when we read back the EXR. I don't remember now, but maybe a multi-part file can only have a part read back when its complete, while a TiledOutput allowed for incomplete tiles?
Author
Owner

It doesn't seem to be it, I just replaced the MultiPartOutputFile calls by TiledOutputFile and nothing changed (apart from the fact that multiview + save buffers stops working, which is to be expected)

It doesn't seem to be it, I just replaced the MultiPartOutputFile calls by TiledOutputFile and nothing changed (apart from the fact that multiview + save buffers stops working, which is to be expected)

This issue was referenced by fc35b758ad

This issue was referenced by fc35b758ade7062b194076c7dd3b848792c1a4ea

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by 4fe9fe74ae

This issue was referenced by 4fe9fe74ae674eef12556888fa948ecd7967dccb
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44682
No description provided.